--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,6 +3,7 @@
 .home {
 
   .intro {
+  
 
     h2 {
       padding: 15px;
@@ -12,6 +13,18 @@
       padding:0 15px;
     }
   
+  }
+
+  .lift-off{
+    border-top: @ebony-clay;
+    
+    h2{
+      padding: 15px;
+    }
+
+    p{
+      padding: 10px;
+    }
   }
 
   .space-images {
