--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,28 @@
 // Navigation code here
+header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    max-width: 100%;
+    margin: 1%;
+      
+    
+    
+    h1{
+        font-size: 4rem;
+    }
+
+    nav{
+        width: 50%;
+        margin: 15px 10px;
+        display: flex;
+        justify-content: space-between;
+        
+        a{
+            text-decoration: none;
+            color: @nav-font;
+            font-size: 1.5rem;
+        }
+    }
+}
