--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,13 @@
 // Mixins Here
+
+.custom-btn(@bgcolor, @width, @font-color){
+    display: block;
+    background-color: @bgcolor;
+    margin: 0px 0px 20px 0px;
+    cursor: pointer;
+    width: @width;
+    height: 45px;
+    font-size: 2rem;
+    border-radius: 10px;
+    color: @font-color;
+}
