finishes CSS of Desktop view

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -71,7 +71,10 @@
       }
 
       .btn {
-        .custom-btn(@btn-bg-color, 200px, #ffff);
+        .custom-btn(@btn-bg-color, 80px, #ffff);
+        border-radius: 12px;
+        height: 10%;
+        font-size: 1.4rem;
       }
     }
 
