--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,7 +5,8 @@ header{
     align-items: center;
     align-content: center;
     max-width: 100%;
-    margin: 1%;
+    margin: 0 auto;
+    background: @wild-sand;
       
     
     
