--- a/css/index.css
+++ b/css/index.css
@@ -166,7 +166,8 @@ header {
   align-items: center;
   align-content: center;
   max-width: 100%;
-  margin: 1%;
+  margin: 0 auto;
+  background: #F6F6F6;
 }
 header h1 {
   font-size: 4rem;
@@ -242,6 +243,14 @@ footer {
 }
 .home .walk .walk-text p {
   margin-bottom: 26px;
+}
+.home .walk .walk-text .btn {
+  background: #22283A;
+  width: 80px;
+  color: #ffff;
+  border-radius: 12px;
+  height: 10%;
+  font-size: 1.4rem;
 }
 .home .walk .walk-img {
   width: 46%;
