adds final CSS layout for Desktop First

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -5,3 +5,11 @@
     width: @width;
     color: @font-color;
 }
+
+.custom-width(){
+    width: 100%;
+}
+
+.custom-padding(){
+    padding: 15px;
+}
