--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,26 +4,25 @@ header{
     flex-direction: column;
     align-items: center;
     align-content: center;
-    max-width: 100%;
     margin: 0 auto;
     background: @wild-sand;
-      
-    
-    
-    h1{
-        font-size: 4rem;
-    }
 
-    nav{
-        width: 50%;
-        margin: 15px 10px;
-        display: flex;
-        justify-content: space-between;
-        
-        a{
-            text-decoration: none;
-            color: @nav-font;
-            font-size: 1.5rem;
-        }
+    .custom-width();    
+}   
+
+h1{
+    font-size: 4rem;
+}
+
+nav{
+    width: 50%;
+    margin: 15px 10px;
+    display: flex;
+    justify-content: space-between;
+    
+    a{
+        text-decoration: none;
+        color: @nav-font;
+        font-size: 1.5rem;
     }
 }
