--- a/css/index.css
+++ b/css/index.css
@@ -165,20 +165,20 @@ header {
   flex-direction: column;
   align-items: center;
   align-content: center;
-  max-width: 100%;
   margin: 0 auto;
   background: #F6F6F6;
+  width: 100%;
 }
-header h1 {
+h1 {
   font-size: 4rem;
 }
-header nav {
+nav {
   width: 50%;
   margin: 15px 10px;
   display: flex;
   justify-content: space-between;
 }
-header nav a {
+nav a {
   text-decoration: none;
   color: #454A59;
   font-size: 1.5rem;
@@ -251,6 +251,10 @@ footer {
   border-radius: 12px;
   height: 10%;
   font-size: 1.4rem;
+}
+.home .walk .walk-text .btn:hover {
+  color: #22283A;
+  background: #ffff;
 }
 .home .walk .walk-img {
   width: 46%;
