--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,15 +11,14 @@
 
     p {
       padding:0 15px;
-    }
-  
+    }  
   }
 
   .lift-off{
-    border-top: @ebony-clay;
+    border-top: @ebony-clay;  
     
     h2{
-      padding: 15px;
+      .custom-padding();
     }
 
     p{
@@ -30,19 +29,19 @@
   .space-images {
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
-
+    .custom-width();
+    
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
-    }
+      }
   }
 
   .visit-planets {
-    padding: 15px;
-
+    .custom-padding();
+    
     h3 {
       margin-top: 11px;
     }
@@ -75,7 +74,13 @@
         border-radius: 12px;
         height: 10%;
         font-size: 1.4rem;
+        
+        &:hover{
+          color: @btn-bg-color;
+          background: #ffff;
+        }
       }
+      
     }
 
     .walk-img {
@@ -83,7 +88,7 @@
       margin-left: 4%;
       
       img {
-        width: 100%;
+        .custom-width();
         height: auto;
         border-radius: 10px;
       }
