--- a/less/navigation.less
+++ b/less/navigation.less
@@ -7,18 +7,39 @@ header{
     margin: 0 auto;
     background: @wild-sand;
 
-    .custom-width();    
+    .custom-width(); 
+
+    .intro{
+        @media @phone {
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+        }
+    }
+
+    
+    
+    
 }   
 
 h1{
-    font-size: 4rem;
+    font-size: 4rem; 
+
+    @media @phone {
+        margin-bottom: 10px;
+        margin-top: 10px;
+    }
 }
 
 nav{
-    width: 50%;
+    width: 80%;
     margin: 15px 10px;
     display: flex;
     justify-content: space-between;
+
+    @media @phone {
+        margin-left: 0;
+    }
     
     a{
         text-decoration: none;
