--- a/css/index.css
+++ b/css/index.css
@@ -214,75 +214,118 @@ footer {
   justify-content: center;
   align-items: center;
 }
-.home .intro h2 {
+body .intro h2 {
   padding: 15px;
 }
-.home .intro p {
+body .intro p {
   padding: 0 15px;
 }
-.home .lift-off {
+body .lift-off {
   border-top: #23293B;
 }
-.home .lift-off h2 {
+body .lift-off h2 {
   padding: 15px;
 }
-.home .lift-off p {
+body .lift-off p {
   padding: 10px;
 }
-.home .space-images {
+body .space-images {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
 }
-.home .space-images img {
+body .space-images img {
   width: 28%;
   margin: 20px 2.5%;
   border-radius: 20px;
   height: 100%;
 }
-.home .visit-planets {
+@media (max-width: 500px) {
+  body .space-images img {
+    width: 100%;
+  }
+}
+@media (max-width: 500px) {
+  body .space-images .sky {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  body .space-images .launch {
+    display: none;
+  }
+}
+body .visit-planets {
   padding: 15px;
 }
-.home .visit-planets h3 {
+body .visit-planets h3 {
   margin-top: 11px;
 }
-.home .visit-planets p {
+body .visit-planets p {
   margin-top: 13px;
 }
-.home .walk {
+body .walk {
   margin-top: 60px;
   border-top: 1px solid #dee2e6;
   padding: 50px 60px;
   display: flex;
   justify-content: center;
 }
-.home .walk .walk-text {
+@media (max-width: 500px) {
+  body .walk {
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin-top: 30px;
+  }
+}
+body .walk .walk-text {
   width: 50%;
 }
-.home .walk .walk-text h3 {
+@media (max-width: 500px) {
+  body .walk .walk-text {
+    width: 95%;
+  }
+}
+body .walk .walk-text h3 {
   margin-bottom: 10px;
 }
-.home .walk .walk-text p {
+body .walk .walk-text p {
   margin-bottom: 26px;
 }
-.home .walk .walk-text .btn {
+body .walk .walk-text .btn {
   background: #22283A;
   width: 80px;
   color: #ffff;
-  border-radius: 12px;
-  height: 10%;
+  border-radius: 5px;
+  height: 8%;
   font-size: 1.4rem;
 }
-.home .walk .walk-text .btn:hover {
+body .walk .walk-text .btn:hover {
   color: #22283A;
   background: #ffff;
 }
-.home .walk .walk-img {
+@media (max-width: 500px) {
+  body .walk .walk-text .btn {
+    width: 100%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    margin-bottom: 10px;
+  }
+}
+body .walk .walk-img {
   width: 46%;
   margin-left: 4%;
 }
-.home .walk .walk-img img {
+body .walk .walk-img img {
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  body .walk .walk-img {
+    width: 95%;
+    margin: 15px 4px 4px 4px;
+  }
 }
