--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,7 +1,5 @@
-// Home Content
 
-.home {
-
+body{
   .intro {
   
 
@@ -36,7 +34,24 @@
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+
+      @media @phone{
+        width: 100%;
       }
+    }
+
+      .sky{
+        @media @phone{
+          display: none;
+        }
+      }
+
+      .launch{
+        @media @phone{
+          display: none;
+        }
+      }
+    
   }
 
   .visit-planets {
@@ -58,8 +73,20 @@
     display: flex;
     justify-content: center;
 
+    @media @phone {
+      flex-direction: column-reverse;
+      justify-content: center;
+      align-items: center;
+      padding: 0;
+      margin-top: 30px;
+    }
+
     .walk-text {
       width: 50%;
+
+      @media @phone{
+        width: 95%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -71,13 +98,20 @@
 
       .btn {
         .custom-btn(@btn-bg-color, 80px, #ffff);
-        border-radius: 12px;
-        height: 10%;
+        border-radius: 5px;
+        height: 8%;
         font-size: 1.4rem;
         
         &:hover{
           color: @btn-bg-color;
           background: #ffff;
+        }
+
+        @media @phone{
+          width: 100%;
+          padding-top: 5%;
+          padding-bottom: 5%;    
+          margin-bottom: 10px;    
         }
       }
       
@@ -92,6 +126,11 @@
         height: auto;
         border-radius: 10px;
       }
-    }
-  }
-}// home
+
+      @media @phone{
+        width: 95%;
+        margin: 15px 4px 4px 4px;
+      }
+    } 
+  } 
+}
